[gd_scene load_steps=4 format=3 uid="uid://i16stfecnkg"]

[ext_resource type="Script" path="res://Animals/martian_falling.gd" id="1_3nbxc"]
[ext_resource type="Texture2D" uid="uid://1oriagbawgyt" path="res://Artwork/MartianSprites/MartianSpritesheet.png" id="2_ic2pq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0dqu"]
height = 72.0

[node name="MartianFalling" type="Area2D" groups=["martian"]]
script = ExtResource("1_3nbxc")

[node name="MartianSprite" type="Sprite2D" parent="."]
position = Vector2(3, -92)
scale = Vector2(0.313542, 0.313542)
texture = ExtResource("2_ic2pq")
hframes = 2
vframes = 3
frame = 1

[node name="MartianBlinkingSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(3, -92)
scale = Vector2(0.314, 0.314)
texture = ExtResource("2_ic2pq")
hframes = 2
vframes = 3
frame = 1

[node name="MartianCollision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v0dqu")

[node name="ParachuteOscillation" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
